--- a/raw_config_file_handling/example/example_config.ini
+++ b/raw_config_file_handling/example/example_config.ini
@@ -1,6 +1,6 @@
-;Comment1
-[GENERAL];Comment2
-BALL_COUNT=2;Comment3
+#Comment1
+[GENERAL]#Comment2
+BALL_COUNT=2#Comment3
 
 [BALL]
 BALL_RGB_COLOR=0,0,255
